<resources>
    <string name="app_name">Sudoku Solver</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="solve">Solve</string>
    <string name="Clear">Clear</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="nine">9</string>
    <string name="step">Step by step solution</string>
</resources>
